WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151887
Crash in clients using userData in _immediateActionAnimationControllerForHitTestResult
https://bugs.webkit.org/show_bug.cgi?id=151887
Summary
Crash in clients using userData in _immediateActionAnimationControllerForHitT...
Beth Dakin
Reported
2015-12-04 15:01:40 PST
Crash in clients using userData in _immediateActionAnimationControllerForHitTestResult
Attachments
Patch
(1.62 KB, patch)
2015-12-04 15:06 PST
,
Beth Dakin
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-12-04 15:02:32 PST
<
rdar://problem/23768087
>
Beth Dakin
Comment 2
2015-12-04 15:06:47 PST
Created
attachment 266664
[details]
Patch
Beth Dakin
Comment 3
2015-12-04 15:23:13 PST
Thanks Sam!
Ryan Haddad
Comment 4
2015-12-04 16:19:33 PST
The following tests are crashing on El Capitan WK2 tests with this change: fast/events/cancelled-force-click-link-navigation.html fast/events/force-click-link-selection-behavior.html fast/events/force-click-on-link-navigation.html fast/events/force-click-text-selection-behavior.html Full crashlog: <
https://build.webkit.org/results/Apple%20El%20Capitan%20Release%20WK2%20(Tests)/r193483%20(1652)/fast/events/cancelled-force-click-link-navigation-crash-log.txt
> Run: <
https://build.webkit.org/builders/Apple%20El%20Capitan%20Release%20WK2%20%28Tests%29/builds/1652
>
Beth Dakin
Comment 5
2015-12-04 17:00:08 PST
Follow-up fixes for the crashes:
http://trac.webkit.org/changeset/193489
Thanks Ryan!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug