Crash in clients using userData in _immediateActionAnimationControllerForHitTestResult https://bugs.webkit.org/show_bug.cgi?id=151887

Reviewed by Sam Weinig.

Cast this correctly.
* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _web_immediateActionAnimationControllerForHitTestResultInternal:withType:userData:]):



Canonical link: https://commits.webkit.org/170022@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193483 268f45cc-cd09-0410-ab3c-d52691b4dbfc